# stereo_loc

./: CMakeLists.txt  package.xml  readme.md
config/: gazebo.yaml  real.yaml
include/stereo_loc/: goal_viewer.h  math_tools.h  stereo_loc.h
launch/: gazebo_sim.launch  test_loc.launch  turtlebot3.launch
lib/: goal_viewer.cpp  math_tools.cpp  stereo_loc.cpp
models/: left_camera.xacro  right_camera.xacro  turtlebot3_waffle.urdf.xacro
models/football_goal/: model.config  model.sdf
models/football_goal_with_mark/: model.config  model.sdf
src/: fit_line.cpp  location_node.cpp  stereo_loc.cpp  test_loc.cpp
texture/: marker.material
world/: goal_with_marker.world
